--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@cassette/core": "^2.0.0-alpha.33",
-    "@cassette/player": "^2.0.0-alpha.33",
-    "gatsby": "^2.3.3",
-    "gatsby-image": "^2.0.35",
+    "@cassette/core": "^2.0.0-beta.4",
+    "@cassette/player": "^2.0.0-beta.4",
+    "gatsby": "^2.18.17",
+    "gatsby-image": "^2.2.37",
     "gatsby-plugin-manifest": "^2.0.26",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.0.32",
-    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-source-filesystem": "^2.1.43",
     "gatsby-source-rss-feed": "^1.1.1",
     "gatsby-transformer-sharp": "^2.1.17",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.5",
+    "react": "^16.12.0",
     "react-audio-player": "^0.11.0",
     "react-cassette-player": "^1.1.2",
-    "react-dom": "^16.8.5",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
     "react-responsive-audio-player": "^1.5.0"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
